# photo-salon

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  WINDOWS.md  build  build-windows.sh  bundle-macos.sh  fetch-linux-qt.sh  fetch-windows-deps.sh  release.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release-macos.yml  release-windows.yml  release.yml
cmake/: WinCrossLinkRules.cmake  clang-cl-win.sh  zig-cxx.sh  zig-ranlib.sh
cmake/toolchains/: windows-x86_64-clang-cl.cmake  windows-x86_64-zig.cmake
doc/: ARCHITECTURE.md  BUILD.md
docs/superpowers/plans/: 2026-05-21-photo-salon-skeleton.md  2026-05-21-zoom.md  2026-05-22-help-overlay.md  2026-05-23-windows-cross-compile.md  2026-05-24-adjustable-background-color.md  2026-05-24-crop-tool.md  2026-05-24-expanded-format-support.md  2026-05-24-folder-navigation.md  2026-05-24-fullscreen.md  2026-05-24-open-folder.md  2026-05-27-bw-conversion.md
docs/superpowers/specs/: 2026-05-21-photo-salon-skeleton-design.md  2026-05-21-zoom-design.md  2026-05-22-help-overlay-design.md  2026-05-23-windows-cross-compile-design.md
macos/: SalonViewer.icns  entitlements.plist
scripts/: build-qt-static-windows.sh
src/: BackgroundColorPicker.cpp  BackgroundColorPicker.h  BwConverter.cpp  BwConverter.h  BwPanel.cpp  BwPanel.h  Const.h  ExifOverlay.cpp  ExifOverlay.h  ExifReader.cpp  ExifReader.h  ExitOverlay.cpp  ExitOverlay.h  HelpOverlay.cpp  HelpOverlay.h  ImageFormats.cpp  ImageFormats.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  OpenDialog.cpp  OpenDialog.h  OpenDialog.mm  main.cpp
tests/: CMakeLists.txt  test_background_color.cpp  test_bw_converter.cpp  test_crop_tool.cpp  test_exif_reader.cpp  test_folder_navigation.cpp  test_fullscreen.cpp  test_help_overlay.cpp  test_image_formats.cpp  test_open_folder.cpp  test_zoom.cpp
windows/: photo-salon.rc
windows/sdk/lib/um/: bcrypt.lib  crypt32.lib  dnsapi.lib  iphlpapi.lib  ncrypt.lib  secur32.lib  winhttp.lib
